[package]
name = "sugaming-cs2-gsi-lighter"
version = "0.1.0"
edition = "2021"

[dependencies]
gsi-cs2 = "0.1.1"
poem = { version = "3.1.1", features = ["server"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16" }
