[package]
name = "sugaming-cs2-gsi-lighter"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.3"
poem = { version = "3.1.1", features = ["server"] }
serde = "1.0.217"
serde_json = "1.0.87"
smart-leds = "0.3.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16" }
ws281x-rpi = "0.0.1"
